# MegaGliscor

./: .gitignore  .gitmodules  README.md  SETUP.md
Kotlin/: build.gradle.kts  runBot.sh
Kotlin/gradle/wrapper/: gradle-wrapper.properties
Kotlin/src/main/kotlin/: BotPlayer.kt  Config.kt  LoggerConfigs.kt  PSInterface.kt  Tests.kt  WebsocketClient.kt  main.kt
Kotlin/src/main/kotlin/states/: BotState.kt  EngineState.kt  PokemonState.kt
Kotlin/src/main/kotlin/states/pokemonstates/: AbilityState.kt  ItemState.kt  Move.kt  MoveState.kt  Species.kt  StatBoosts.kt  StatBuild.kt  StatRange.kt  StatState.kt  StatusState.kt  VolatileStatusState.kt
poke-engine-ffi/: Cargo.toml  README.md
poke-engine-ffi/bindings-out/uniffi/poke_engine_ffi/: poke_engine_ffi.kt
poke-engine-ffi/poke-engine-ffi/: Cargo.toml
poke-engine-ffi/poke-engine-ffi/src/: lib.rs
poke-engine-ffi/uniffi-bindgen/: Cargo.toml
